--- a/styles/services.scss
+++ b/styles/services.scss
@@ -86,7 +86,7 @@ h3{
 //HEADER
 .header_section{
   height: 500px;
-  background: url("../images/background/portfolio_header.png") no-repeat center;
+  background: url("../images/background/services_back.png") no-repeat center;
   position: relative;
   background-size: cover;
   padding-top: 30px;
@@ -161,115 +161,159 @@ font-size: 22px;
     font-size:70px;
     color: white;
     font-weight: 700;
+    margin-bottom: 25px;
   }
-  h2{
-    font-size: 38px;
-    font-weight: lighter;
-    color: white;
+  .order_link{
+    a{
+      color: #fff;
+      font-size: 24px;
+      padding: 15px 76px;
+      border: 1px solid #fff;
+      transition: 0.2s;
+      &:hover{
+        background: #fff;
+        color: #000;
+      }
+    }
   }
 }
 }
 //HEADER
 
-//GALLERY SECTION
-
-.example_work_section{
-  margin-top: 130px;
-  margin-bottom: 130px;
+//SERVICES EXAMPLES
+.service_examples{
+  margin-top: 100px;
   .container{
-    width: 1000px;
-    .text_content{
-      h3{
-        font-size: 58px;
-        text-align: left;
-        margin-bottom: 20px;
-      }
-      ul{
+    .wrapper{
+      display: grid;
+      grid-template-columns: 1fr;
+      .example_item{
         display: flex;
-        li{
-          margin-bottom: 24px;
-          margin-right: 90px;
-          span{
-            font-size: 18px;
-            margin-bottom: 8px;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height:562px;
+        margin-bottom: 50px;
+        .text_part{
+          text-align: left;
+          display: flex;
+          flex-direction: column;
+          justify-content: space-between;
+          width: 50%;
+          height: 100%;
+          padding: 5%;
+          h2{
+            font-size: 50px;
           }
           p{
-            font-size: 24px;
-
+            font-size: 20px;
+          }
+          .more_details_link{
+            a{
+              color:black;
+              font-size: 20px;
+              padding: 15px 95px;
+              border: 1px solid #545A2F;
+              &:hover{
+                background: #545A2F;
+                color: white;
+              }
+            }
           }
         }
-      }
-    }
-    .slider_gallery{
-      width: 100%;
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      grid-template-rows: repeat(2, 1fr);
-      grid-gap: 15px;
-      margin-bottom: 42px;
-      .slider_item{
-        width: 100%;
-        img{
-          width: 100%;
+        .img_part{
+          width: 50%;
           height: 100%;
-        }
-        transition: 0.3s;
-        &:hover{
-          transform: scale(1.03);
-        }
-      }
-      .long_item{
-        grid-column-start: 2;
-    grid-column-end: 4;
-      }
-      .text_item{
-        background:#E9ECE0 ;
-        text-align: center;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        p{
-          width: 250px;
-          font-size: 18px;
-          font-weight: 400;
-          font-style: italic;
+          padding: 4%;
+          img{
+            width: 100%;
+            height: 100%;
+          }
         }
       }
     }
   }
 }
-.how_order_section{
-  margin-top: 200px;
-  margin-bottom: 200px;
-  .text_block{
+.contact_us_section{
+  width: 100%;
+  .container{
+    padding: 100px 100px 50px 100px;
     display: flex;
-    justify-content: flex-end;
-    margin-right: 10%;
-    margin-bottom: 25px;
-    h3{
-      text-align: left;
+    justify-content: space-between;
+    .text_content{
+      width: 38%;
+      h3{
+        text-align: left;
+        font-size: 38px;
+        margin-bottom: 40px;
+      }
+      span{
+        font-size: 24px;
+        margin-bottom: 20px;
+      }
+      a{
+        color: black;
+        font-size: 24px;
+        margin-bottom: 15px;
+      }
+      img{
+        margin-top: 40px;
+      }
+    }
+    .form_content{
+      width: 58%;
+      margin-bottom: 150px;
+      form{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+      input{
+        border: 1px solid #99A18E;
+        font-size: 24px;
+        width: 100%;
+        margin-bottom: 24px;
+        color: #63533E;
+        height: 50px;
+        padding-left: 22px;
+      }
+      textarea{
+        border: 1px solid #99A18E;
+        font-size: 24px;
+        width: 100%;
+        margin-bottom: 24px;
+        color: #63533E;
+        padding-left: 22px;
+        padding-top: 10px;
+        height: 125px;
+      }
+      .input_block{
+        margin-bottom: 40px;
+      #access{
+        width: 18px;
+        height: 18px;
+        margin: 0;
+        margin-right: 5px;
+      }
+      label{
+        font-size: 18px;
+      }
+    }
+    .submit_input_block{
+      display: flex;
+      justify-content: flex-end;
+      width: 100%;
+    .sub_input{
+      width: 40%;
+      background: #545A2F;
+      color: white;
+      padding: 0;
+      &:hover{
+        background: #363a1d;
+        cursor: pointer;
+      }
     }
   }
-  .background_block{
-    width: 100%;
-    height: 250px;
-    background: #99A18E4D;
-    display: flex;
-    align-items: center;
-    span{
-      font-size: 18px;
     }
-    img{
-      width: 800px;
-    }
-    .your_email{
-      font-size: 20px;
-    }
-    label{
-      font-size: 20px;
-    }
-    .sub_input{
-      margin-top: 15px;
     }
   }
 }
