--- a/styles/services_media.scss
+++ b/styles/services_media.scss
@@ -1,3 +1,4 @@
+@import url("./fonts.css");
 *, body, html{
   margin: 0;
   padding: 0;
@@ -18,12 +19,6 @@
   }
   .container{
     width: 90%;
-  }
-  .how_order_section{
-    .background_block{
-      img{
-        width: 50%;
-    }
   }
 }
 @media (max-width:1125px)  {
@@ -71,6 +66,39 @@
   }
 }
 }
+.service_examples{
+  .container{
+    .wrapper{
+      .example_item{
+        height: auto;
+        .text_part{
+          padding: 0;
+          h2{
+            font-size: 45px;
+          }
+          p{
+            font-size: 16px;
+          }
+          .more_details_link{
+            margin-top: 30px;
+          }
+        }
+        .img_part{
+          padding: 1;
+        }
+      }
+    }
+  }
+}
+.contact_us_section{
+  .container{
+    .text_content{
+      h3{
+        font-size: 32px;
+      }
+    }
+  }
+}
 footer{
   .container{
   height: auto;
@@ -96,52 +124,7 @@ footer{
 }
 }
 }
-@media (max-width: 1024px){
-  .example_work_section{
-    .container{
-      width: 90%;
-      .slider_gallery{
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(3, 1fr);
-        .long_item{
-          grid-column-start: 1;
-          grid-column-end: 3;
-          grid-row-start: 1;
-          grid-row-end: 2;
-        }
-      }
-    }
-  }
-  .how_order_section{
-    .text_block{
-      h3{
-        font-size: 25px;
-      }
-    }
-    .background_block{
-      height: 200px;
-      .form_block{
-        span{
-          font-size: 16px;
-          margin-bottom: 10px;
-        }
-        form{
-          .your_email{
-            font-size: 18px;
-            width: 60%;
-            margin-bottom: 10px;
-          }
-          label{
-            font-size: 16px;
-          }
-          .sub_input{
-            font-size: 18px;
-          }
-        }
-      }
-    }
-  }
-}
+
 @media (max-width:768px){
   h3{
     font-size: 24px;
@@ -155,8 +138,10 @@ footer{
         h1{
           font-size: 40px;
         }
-        h2{
-          font-size: 25px;
+        .order_link{
+          a{
+          font-size: 18px;
+        }
         }
       }
   header{
@@ -252,40 +237,70 @@ footer{
   }
 }
 }
-.example_work_section{
-  margin-top: 90px;
-  margin-bottom: 90px;
+.service_examples{
   .container{
+    .wrapper{
+      .example_item{
+        flex-direction: column;
+        width: 100%;
+        margin-bottom: 50px;
+        .text_part{
+          width: 100%;
+          padding: 0;
+          h2{
+            font-size: 35px;
+            margin-bottom: 30px;
+          }
+          .more_details_link{
+            margin-top: 30px;
+          }
+        }
+        .img_part{
+          padding: 0;
+          width: 100%;
+          margin-bottom: 30px;
+        }
+      }
+      .reverse{
+        flex-direction: column-reverse;
+      }
+    }
+  }
+}
+.contact_us_section{
+  margin-top: 100px;
+  .container{
+    flex-direction: column;
+    padding: 0;
+    width: 90%;
     .text_content{
       width: 100%;
       h3{
-        font-size: 40px;
+        text-align: center;
+        font-size: 24px;
       }
-      ul{
-        flex-wrap: wrap;
-        justify-content: space-between;
-        width: 100%;
-        li{
-
-        }
+      .mobile_none{
+        display: none;
       }
     }
-    .slider_gallery{
-      display: flex;
-      padding: 10px;
-      .slider_item{
-        img{
-          width: 95%;
-          margin: auto;
-        }
-        &:hover{
-          transform: none;
+    .form_content{
+      width: 100%;
+      form{
+        input{
+        font-size: 18px;
+        padding: 10px 0 10px 10px;
+      }
+      textarea{
+        font-size: 18px;
+        padding-top: 18px;
+        padding-left: 10px;
+      }
+      .submit_input_block{
+        justify-content: center;
+        .sub_input{
+          width: 100%;
         }
       }
-    }
-    .green_btn{
-      a{
-        font-size: 20px;
       }
     }
   }
@@ -334,33 +349,4 @@ footer{
       }
     }
   }
-  .how_order_section{
-    .text_block{
-      text-align: center;
-      margin-right: 0;
-      h3{
-        margin: auto;
-      }
-    }
-    .background_block{
-      flex-direction: column;
-      height: auto;
-      padding: 20px 0;
-      img{
-        display: block;
-        width: 90%;
-        margin-left: 10%;
-      }
-      .form_block{
-        width: 90%;
-        margin: auto;
-        text-align: center;
-      }
-      form{
-        width: 100%;
-        text-align: center;
-      }
-    }
-  }
-}
 }
