--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -93,6 +93,33 @@ h3 span {
   cursor: default;
 }
 
+.back-to-top {
+  display: none;
+  position: fixed;
+  right: 30px;
+  bottom: 50px;
+  width: 95px;
+  height: 95px;
+  border-radius: 50%;
+  background: #99A18E;
+}
+
+.back-to-top:hover, .back-to-top:focus {
+  -webkit-filter: brightness(1.5);
+          filter: brightness(1.5);
+  outline: none;
+}
+
+.back-to-top::before {
+  position: absolute;
+  content: "";
+  background-size: cover;
+  width: 95px;
+  height: 95px;
+  background: url("../images/icons/back_arrow.png") center no-repeat;
+  background-position: 50% 50%;
+}
+
 .header_section {
   height: 500px;
   background: url("../images/background/portfolio_header.png") no-repeat center;
