--- a/styles/media.css
+++ b/styles/media.css
@@ -376,6 +376,40 @@
 }
 
 @media (max-width: 768px) {
+  .mfp-container {
+    padding-left: 0px !important;
+    padding-right: 0px !important;
+  }
+  .test {
+    padding: 60px 20px;
+    width: 100%;
+    height: 100%;
+  }
+  .test .wrapper h2 {
+    font-size: 38px;
+    margin-bottom: 11px;
+  }
+  .test .wrapper p {
+    font-size: 18px;
+    margin-bottom: 22px;
+  }
+  .test .wrapper input {
+    font-size: 18px;
+    margin-bottom: 10px;
+  }
+  .test .wrapper .input_block {
+    margin-bottom: 24px;
+  }
+  .test .top_branch {
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+  .test .bottom_branch {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+  }
   h3 {
     font-size: 24px;
   }
