--- a/styles/media.scss
+++ b/styles/media.scss
@@ -443,13 +443,53 @@ footer{
 }
 }
 @media (max-width:768px){
+  .mfp-container {
+    padding-left: 0px !important;
+    padding-right: 0px !important;
+}
+  .test{
+  padding: 60px 20px;
+  width: 100%;
+  height: 100%;
+  .wrapper{
+    h2{
+      font-size: 38px;
+      margin-bottom: 11px;
+    }
+    p{
+      font-size: 18px;
+      margin-bottom: 22px;
+    }
+  input{
+    font-size: 18px;
+    margin-bottom: 10px;
+  }
+  .input_block{
+    margin-bottom: 24px;
+  }
+  }
+  .top_branch{
+  position: absolute;
+  top: 0;
+  left:0;
+  }
+  .bottom_branch{
+  position: absolute;
+  bottom: 0;
+  right:0;
+  }
+  }
+
   h3{
     font-size: 24px;
   }
   body.lock{
     overflow: hidden;
   }
+
   .header_section{
+
+
     height: 566px;
     .left_branch{
       width: 45%;
@@ -850,4 +890,5 @@ img{
       }
     }
   }
+
 }
