--- a/styles/portfolio.scss
+++ b/styles/portfolio.scss
@@ -81,6 +81,29 @@ h3{
   pointer-events: none;
   cursor: default;
 }
+.back-to-top{
+  display: none;
+  position: fixed;
+  right:30px;
+  bottom: 50px;
+  width: 95px;
+  height: 95px;
+  border-radius: 50%;
+  background: #99A18E;
+  &:hover, &:focus{
+    filter:brightness(1.5);
+    outline: none;
+  }
+  &::before{
+    position: absolute;
+    content: "";
+    background-size: cover;
+    width: 95px;
+    height: 95px;
+    background: url("../images/icons/back_arrow.png") center no-repeat;
+    background-position: 50% 50%;
+  }
+}
 
 //PORTFOLIO
 //HEADER
