--- a/styles/style.css
+++ b/styles/style.css
@@ -93,6 +93,183 @@ h3 span {
   cursor: default;
 }
 
+.back-to-top {
+  display: none;
+  position: fixed;
+  right: 30px;
+  bottom: 50px;
+  width: 95px;
+  height: 95px;
+  border-radius: 50%;
+  background: #99A18E;
+}
+
+.back-to-top:hover, .back-to-top:focus {
+  -webkit-filter: brightness(1.5);
+          filter: brightness(1.5);
+  outline: none;
+}
+
+.back-to-top::before {
+  position: absolute;
+  content: "";
+  background-size: cover;
+  width: 95px;
+  height: 95px;
+  background: url("../images/icons/back_arrow.png") center no-repeat;
+  background-position: 50% 50%;
+}
+
+.order_consultation {
+  display: none;
+}
+
+.test {
+  position: relative;
+  margin: auto;
+  padding: 60px;
+  background: white;
+  width: 616px;
+  height: 571px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.test .wrapper {
+  text-align: center;
+  z-index: 10;
+}
+
+.test .wrapper h2 {
+  font-size: 58px;
+  color: #545A2F;
+  line-height: 60px;
+  margin-bottom: 19px;
+}
+
+.test .wrapper p {
+  font-size: 22px;
+  margin-bottom: 32px;
+}
+
+.test .wrapper input {
+  border: 1px solid #99A18E;
+  font-size: 24px;
+  width: 100%;
+  margin-bottom: 24px;
+  color: #63533E;
+  height: 50px;
+  padding-left: 22px;
+}
+
+.test .wrapper .input_block {
+  margin-bottom: 40px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.test .wrapper .input_block #access {
+  width: 20px;
+  height: 20px;
+  margin: 0;
+  margin-right: 10px;
+}
+
+.test .wrapper .input_block label {
+  font-size: 16px;
+}
+
+.test .wrapper .submit_input_block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 100%;
+  margin-bottom: 0;
+}
+
+.test .wrapper .submit_input_block .sub_input {
+  background: #545A2F;
+  color: white;
+  width: 311px;
+  height: 60px;
+  font-size: 24px;
+  padding: 0;
+}
+
+.test .wrapper .submit_input_block .sub_input:hover {
+  background: #363a1d;
+  cursor: pointer;
+}
+
+.test .mfp-close-btn-in .mfp-close {
+  color: #545A2F;
+}
+
+.test .top_branch {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.test .bottom_branch {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+}
+
+.place_section {
+  position: relative;
+}
+
+.place_section .text_block {
+  width: 750px;
+  margin: 120px auto;
+}
+
+.place_section .text_block p {
+  width: 600px;
+  text-align: center;
+  margin: 40px auto;
+  font-size: 20px;
+}
+
+.place_section .left_branch {
+  position: absolute;
+  top: 25%;
+}
+
+.place_section .right_branch {
+  position: absolute;
+  top: 30%;
+  right: 0;
+}
+
+.place_section .img_block {
+  margin: 200px auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.place_section .img_block img {
+  width: 375px;
+}
+
 .header_section {
   height: 950px;
   background: url("../images/background/dark_bg_1.png") no-repeat center;
@@ -213,47 +390,6 @@ h3 span {
   position: absolute;
   right: 0;
   top: 35%;
-}
-
-.place_section {
-  position: relative;
-}
-
-.place_section .text_block {
-  width: 750px;
-  margin: 120px auto;
-}
-
-.place_section .text_block p {
-  width: 600px;
-  text-align: center;
-  margin: 40px auto;
-  font-size: 20px;
-}
-
-.place_section .left_branch {
-  position: absolute;
-  top: 25%;
-}
-
-.place_section .right_branch {
-  position: absolute;
-  top: 30%;
-  right: 0;
-}
-
-.place_section .img_block {
-  margin: 200px auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-}
-
-.place_section .img_block img {
-  width: 375px;
 }
 
 .proffessional_section {
