--- a/styles/certain_service.scss
+++ b/styles/certain_service.scss
@@ -288,18 +288,159 @@ font-size: 22px;
 }
 }
 //HEADER
-.contact_us_section{
-  margin-top: 200px;
+
+//LINK BACK
+.back-to-last-page{
+  margin-top: 60px;
+  margin-bottom: 100px;
+  a{
+    margin-left: 60px;
+    font-size: 24px;
+    color: black;
+    position: relative;
+    &::before{
+      position: absolute;
+      width: 45px;
+      height: 20px;
+      content: "";
+      background: url("../images/icons/back-to-last-page.png") no-repeat;
+      background-size: cover;
+      top: 5px;
+      left: -60px;
+    }
+  }
+}
+//LINK BACK
+//SERVICES EXAMPLES
+.service_examples{
+  margin-top: 100px;
   .container{
+    .wrapper{
+      .example_item{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height:562px;
+        margin-bottom: 50px;
+        .text_part{
+          text-align: left;
+          display: flex;
+          flex-direction: column;
+          justify-content: space-between;
+          width: 50%;
+          height: 100%;
+          padding: 5%;
+          h2{
+            font-size: 50px;
+          }
+          p{
+            font-size: 20px;
+          }
+        }
+        .img_part{
+          width: 50%;
+          padding: 4%;
+          img{
+            width: 100%;
+          }
+        }
+      }
+    }
+  }
+}
+//SERVICES EXAMPLES
+// EXAMPLE WORK SECTION
+.example_work_section{
+  margin-top: 130px;
+  margin-bottom: 130px;
+  .container{
+    width: 1000px;
+    .text_content{
+      width: 469px;
+      margin: auto;
+      h3{
+        font-size: 38px;
+        margin-bottom: 85px;
+        text-align: left;
+      }
+    }
+    .slider_gallery{
+      width: 100%;
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      grid-template-rows: repeat(2, 1fr);
+      grid-gap: 15px;
+      margin-bottom: 42px;
+      .slider_item{
+        width: 100%;
+        img{
+          width: 100%;
+          height: 100%;
+        }
+        transition: 0.3s;
+        &:hover{
+          transform: scale(1.03);
+        }
+      }
+      .long_item{
+        grid-column-start: 2;
+    grid-column-end: 4;
+      }
+      .text_item{
+        background:#E9ECE0 ;
+        text-align: center;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        p{
+          width: 250px;
+          font-size: 18px;
+          font-weight: 400;
+          font-style: italic;
+        }
+      }
+    }
+  }
+}
+// EXAMPLE WORK SECTION
+
+// TEXT SECTION
+.text_section{
+  margin-top: 125px;
+  .container{
+    .wrapper{
+      width: 60%;
+      text-align: center;
+      margin: auto;
+      h2{
+        font-size: 58px;
+        margin-bottom: 47px;
+      }
+      p{
+        font-size: 18px;
+      }
+    }
+  }
+}
+// TEXT SECTION
+.contact_us_section{
+  margin-top: 150px;
+  width: 100%;
+  .container{
+    padding: 100px 100px 50px 100px;
     display: flex;
     justify-content: space-between;
     .text_content{
-      width: 30%;
-      margin-top: 200px;
-      .link_item{
-        width: 100%;
-        display: flex;
-        align-items: center;
+      width: 38%;
+      h3{
+        text-align: left;
+        font-size: 38px;
+        margin-bottom: 40px;
+      }
+      span{
+        font-size: 24px;
+        margin-bottom: 20px;
       }
       a{
         color: black;
@@ -307,18 +448,12 @@ font-size: 22px;
         margin-bottom: 15px;
       }
       img{
-        width: 60%;
-        margin-right: 30px;
+        margin-top: 40px;
       }
     }
     .form_content{
-      width: 50%;
+      width: 58%;
       margin-bottom: 150px;
-      h3{
-        text-align: left;
-        font-size: 38px;
-        margin-bottom: 40px;
-      }
       form{
         width: 100%;
         display: flex;
@@ -355,6 +490,8 @@ font-size: 22px;
       }
     }
     .submit_input_block{
+      display: flex;
+      justify-content: flex-end;
       width: 100%;
     .sub_input{
       width: 40%;
@@ -414,5 +551,27 @@ footer{
     }
   }
 }
-
-
+.back-to-top{
+  z-index: 70;
+  display: none;
+  position: fixed;
+  right:30px;
+  bottom: 50px;
+  width: 95px;
+  height: 95px;
+  border-radius: 50%;
+  background: #99A18E;
+  &:hover, &:focus{
+    filter:brightness(1.5);
+    outline: none;
+  }
+  &::before{
+    position: absolute;
+    content: "";
+    background-size: cover;
+    width: 95px;
+    height: 95px;
+    background: url("../images/icons/back_arrow.png") center no-repeat;
+    background-position: 50% 50%;
+  }
+}
