--- a/styles/contacts_media.scss
+++ b/styles/contacts_media.scss
@@ -108,6 +108,38 @@ footer{
 }
 
 @media (max-width:768px){
+  .test{
+    padding: 60px 20px;
+    width: 100%;
+    height: 100%;
+    .wrapper{
+      h2{
+        font-size: 38px;
+        margin-bottom: 11px;
+      }
+      p{
+        font-size: 18px;
+        margin-bottom: 22px;
+      }
+    input{
+      font-size: 18px;
+      margin-bottom: 10px;
+    }
+    .input_block{
+      margin-bottom: 24px;
+    }
+    }
+    .top_branch{
+    position: absolute;
+    top: 0;
+    left:0;
+    }
+    .bottom_branch{
+    position: absolute;
+    bottom: 0;
+    right:0;
+    }
+    }
   h3{
     font-size: 24px;
   }
