--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -94,6 +94,7 @@ h3 span {
 }
 
 .back-to-top {
+  z-index: 70;
   display: none;
   position: fixed;
   right: 30px;
@@ -118,6 +119,120 @@ h3 span {
   height: 95px;
   background: url("../images/icons/back_arrow.png") center no-repeat;
   background-position: 50% 50%;
+}
+
+.disabled {
+  pointer-events: none;
+  cursor: default;
+}
+
+.order_consultation {
+  display: none;
+}
+
+.test {
+  position: relative;
+  margin: auto;
+  padding: 60px;
+  background: white;
+  width: 616px;
+  height: 571px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.test .wrapper {
+  text-align: center;
+  z-index: 10;
+}
+
+.test .wrapper h2 {
+  font-size: 58px;
+  color: #545A2F;
+  line-height: 60px;
+  margin-bottom: 19px;
+}
+
+.test .wrapper p {
+  font-size: 22px;
+  margin-bottom: 32px;
+}
+
+.test .wrapper input {
+  border: 1px solid #99A18E;
+  font-size: 24px;
+  width: 100%;
+  margin-bottom: 24px;
+  color: #63533E;
+  height: 50px;
+  padding-left: 22px;
+}
+
+.test .wrapper .input_block {
+  margin-bottom: 40px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.test .wrapper .input_block #access {
+  width: 20px;
+  height: 20px;
+  margin: 0;
+  margin-right: 10px;
+}
+
+.test .wrapper .input_block label {
+  font-size: 16px;
+}
+
+.test .wrapper .submit_input_block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 100%;
+  margin-bottom: 0;
+}
+
+.test .wrapper .submit_input_block .sub_input {
+  background: #545A2F;
+  color: white;
+  width: 311px;
+  height: 60px;
+  font-size: 24px;
+  padding: 0;
+}
+
+.test .wrapper .submit_input_block .sub_input:hover {
+  background: #363a1d;
+  cursor: pointer;
+}
+
+.test .mfp-close-btn-in .mfp-close {
+  color: #545A2F;
+}
+
+.test .top_branch {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.test .bottom_branch {
+  position: absolute;
+  bottom: 0;
+  right: 0;
 }
 
 .header_section {
